--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run:
           name: Install Node.js
           command: |
-            brew install node
+            brew install node@21.2.0
             node -v
             npm -v
       - run:
