--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,20 +10,20 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install Node.js
+          name: Install NVM and Node.js
           command: |
+            # Install NVM
             curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
             source ~/.nvm/nvm.sh
-            nvm install 20.15.0  # Replace '16' with the Node.js version you need
+            # Install specific Node.js version (e.g., v14.17.6)
+            nvm install 20.15.0
             nvm use 20.15.0
-
-      # Optionally install a specific npm version after Node.js
+            # Verify installation
+            node -v
+            npm -v
       - run:
-          name: Install Specific npm Version
-          command: |
-            npm install -g npm@8  # Replace '8' with your required npm version
-            npm -v  # Verify the npm version
-
+          name: Install Dependencies
+          command: npm install
       # Install Appium
       - run:
           name: Install Appium
