--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,15 +10,19 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install Homebrew
+          name: Install Node.js 20.15.0 and npm directly
           command: |
-            if ! which brew; then
-              /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-            fi
-      - run:
-          name: Install Node.js 20.15.0
-          command: |
-            brew install node@20
+            # Download Node.js 20.15.0 binaries
+            curl -O https://nodejs.org/dist/v20.15.0/node-v20.15.0-darwin-x64.tar.gz
+
+            # Extract the downloaded file
+            tar -xzf node-v20.15.0-darwin-x64.tar.gz
+
+            # Move Node.js binaries to a system location
+            sudo mv node-v20.15.0-darwin-x64 /usr/local/node-v20.15.0
+            sudo ln -s /usr/local/node-v20.15.0/bin/node /usr/local/bin/node
+            sudo ln -s /usr/local/node-v20.15.0/bin/npm /usr/local/bin/npm
+            sudo ln -s /usr/local/node-v20.15.0/bin/npx /usr/local/bin/npx
       - run:
           name: Verify Node.js Installation
           command: |
