--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,15 @@ jobs:
             curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
             source ~/.nvm/nvm.sh
       - run:
-          name: Remove Node.js version 18.6.0
+          name: Uninstall currently active Node.js version
           command: |
             source ~/.nvm/nvm.sh
-            nvm uninstall 18.6.0
-            nvm list
-            nvm uninstall --lts
-            nvm uninstall --latest
+            nvm uninstall $(nvm current)
+      - run:
+          name: Verify Node.js version
+          command: |
+            node -v
+            nvm ls
       - run:
           name: Install Node.js 20.15.0 and npm directly
           command: |
