--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
             appium -v
             appium &
             sleep 5
-            npx wdio config/wdio.shared.conf.js
+            npx wdio config/wdio.ios.conf.js
 
 workflows:
   build_and_test:
